gcc/testsuite/gcc.dg/tree-ssa/ltrans-1.c
@@ -17,7 +17,6 @@ int foo(int N, int *res)
     }
   *res = sum + N;
 }
-/* { dg-final { scan-tree-dump-times "converted loop nest to perfect
-   loop nest" 1 "ltrans"} } */ 
+/* { dg-final { scan-tree-dump-times "converted loop nest to perfect loop nest" 1 "ltrans"} } */ 
 /* { dg-final { scan-tree-dump-times "transformed loop" 1 "ltrans"} } */ 
 /* { dg-final { cleanup-tree-dump "ltrans" } } */
